# teacher

./: .env  pyproject.toml  requirements.txt
src/: app.py  generic-teacher.py
